--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "mongoose": "^9.0.1",
     "next": "14.1.0",
+    "nodemailer": "^7.0.11",
+    "qrcode": "^1.5.4",
+    "razorpay": "^2.9.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
