--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@yudiel/react-qr-scanner": "^2.4.1",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.1",
     "next": "14.1.0",
     "nodemailer": "^7.0.11",
@@ -17,6 +19,7 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "25.0.2",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
