--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@yudiel/react-qr-scanner": "^2.4.1",
+    "framer-motion": "^12.23.26",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.1",
     "next": "14.1.0",
