--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@yudiel/react-qr-scanner": "^2.4.1",
     "framer-motion": "^12.23.26",
+    "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.1",
     "next": "14.1.0",
@@ -20,6 +21,7 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/html2canvas": "^0.5.35",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "25.0.2",
     "@types/react": "^18.2.45",
