--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "framer-motion": "^12.23.26",
     "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.3",
+    "jspdf": "^3.0.4",
     "mongoose": "^9.0.1",
     "next": "14.1.0",
     "nodemailer": "^7.0.11",
+    "pdfkit": "^0.17.2",
     "qrcode": "^1.5.4",
     "razorpay": "^2.9.6",
     "react": "18.2.0",
