--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "@yudiel/react-qr-scanner": "^2.4.1",
+    "@yudiel/react-qr-scanner": "^2.5.0",
     "framer-motion": "^12.23.26",
     "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.3",
@@ -20,8 +20,7 @@
     "qrcode": "^1.5.4",
     "razorpay": "^2.9.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-qr-reader": "^3.0.0-beta-1"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/html2canvas": "^0.5.35",
