--- a/package.json
+++ b/package.json
@@ -9,25 +9,31 @@
   },
   "dependencies": {
     "@yudiel/react-qr-scanner": "^2.5.0",
+    "bcryptjs": "^3.0.3",
     "framer-motion": "^12.23.26",
     "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.3",
     "jspdf": "^3.0.4",
-    "mongoose": "^9.0.1",
+    "link": "^2.1.1",
+    "mongoose": "^9.0.2",
     "next": "14.1.0",
     "nodemailer": "^7.0.11",
     "pdfkit": "^0.17.2",
     "qrcode": "^1.5.4",
     "razorpay": "^2.9.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "twilio": "^5.11.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/html2canvas": "^0.5.35",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "25.0.2",
+    "@types/qrcode": "^1.5.6",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
+    "@types/twilio": "^3.19.2",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
