--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.3",
     "jspdf": "^3.0.4",
     "jsqr": "^1.4.0",
+    "jszip": "^3.10.1",
     "link": "^2.1.1",
     "logrocket": "^11.0.0",
     "mongoose": "^7.6.3",
