--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "pdfkit": "^0.17.2",
     "qrcode": "^1.5.4",
     "razorpay": "^2.9.6",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-dom": "18.2.0",
     "resend": "^6.6.0",
     "twilio": "^5.11.1",
